tests/NormalTests/paczka1/small_fuzzy/30548689.err
Error in line 5: 0sLIuYmh=QS A23 53,1
Error in line 3: 0sLIuYmhzQS S709 15,2
Error in line 6: b3k0pF4 A23 77,1
